Redo unfolding + add run validations